python_application/K8s/Dev/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: fastapi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
